old-code/sa/argocd/argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  gateways:
  - istio-system/extra-gateway
  - istio-system/main-gateway
  hosts:
    - prod-argocd.slleisure.com
    - prod-argocd.sldevops.net
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
